# auto-research

./: .gitignore  AGENT_MODE_PLAN.md  CLAUDE.md  PLAN.md  README.md  backtest.py  cli.py  datasource.py  firewall.py  loop.py  profiler.py  pyproject.toml  sandbox.py  strategy_template.py  test_smoke.py  torture.py
.beads/: issues.jsonl
skills/: ducklake_data.md
